// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`screen: Validators/VotingPower matches snapshot 1`] = `
<div
  className="css-1iftn23-root"
>
  <div
    className="css-lj3qlt-content"
  >
    <p
      className="MuiTypography-root MuiTypography-body1 css-pfovru-MuiTypography-root"
    >
      
    </p>
    <p
      className="MuiTypography-root MuiTypography-body1 percentage css-pfovru-MuiTypography-root"
    >
      20%
    </p>
  </div>
  <div
    className="css-si1ndt-chart"
  >
    <div
      className="css-19w8hwk-active"
    />
  </div>
</div>
`;

exports[`screen: Validators/VotingPower matches snapshot with topVotingPower set to false 1`] = `
<div
  className="css-u31ock-root"
>
  <div
    className="css-1dmmoum-content"
  >
    <p
      className="MuiTypography-root MuiTypography-body1 css-pfovru-MuiTypography-root"
    >
      
    </p>
    <p
      className="MuiTypography-root MuiTypography-body1 percentage css-pfovru-MuiTypography-root"
    >
      0%
    </p>
  </div>
  <div
    className="css-fl4w4-chart"
  >
    <div
      className="css-c7dmbn-active"
    />
  </div>
</div>
`;
